--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -12,8 +12,8 @@
 
 name: Build and Deploy to GKE
 
-on:
-  push:
+on:google-github-actions/get-gke-credentials@v0.2.1
+  push:_PROJECT-ID'https://github.com/google-github-actions/setup-gcloud/tree/master/example-workflows/gke'
     branches:
       - master
 
